[gd_scene load_steps=22 format=2]

[ext_resource path="res://screens/main/Crab.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/main/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/background/background2.png" type="Texture" id=3]
[ext_resource path="res://assets/walls.png" type="Texture" id=4]
[ext_resource path="res://assets/vegetation.png" type="Texture" id=5]
[ext_resource path="res://assets/stones.png" type="Texture" id=6]
[ext_resource path="res://assets/background/background3.png" type="Texture" id=7]
[ext_resource path="res://assets/background/background1.png" type="Texture" id=8]
[ext_resource path="res://assets/sound/music.ogg" type="AudioStream" id=9]
[ext_resource path="res://screens/main/HUD.tscn" type="PackedScene" id=10]
[ext_resource path="res://screens/main/Fish.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/sound/tension.wav" type="AudioStream" id=12]
[ext_resource path="res://screens/main/Boat.tscn" type="PackedScene" id=13]
[ext_resource path="res://screens/main/EelPath.tscn" type="PackedScene" id=14]
[ext_resource path="res://screens/main/Trash.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2304, 352 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 264, 1552 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2728, 680 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -104, 440, 0, 0, 0, 0, -96, 1424 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 4376, 480, 0, 0, 0, 0, 4376, 1352 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 248, 2600, 0, 0, 0, 0, 896, 2768, 0, 0, 0, 0, 1152, 2688, 0, 0, 0, 0, 1416, 2680, 0, 0, 0, 0, 1728, 2768, 0, 0, 0, 0, 1984, 2696, 0, 0, 0, 0, 2280, 2680, 0, 0, 0, 0, 2520, 2776, 0, 0, 0, 0, 2944, 2680, 0, 0, 0, 0, 3064, 2776, 0, 0, 0, 0, 3304, 2712, 0, 0, 0, 0, 3624, 2712, 0, 0, 0, 0, 4096, 2712 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Fish = ExtResource( 11 )
Trash = ExtResource( 15 )

[node name="Boat1" parent="." instance=ExtResource( 13 )]
position = Vector2( 720, 280 )

[node name="Boat2" parent="." instance=ExtResource( 13 )]
position = Vector2( 1688, 280 )
sprite = 1

[node name="Boat3" parent="." instance=ExtResource( 13 )]
position = Vector2( 2632, 281.494 )
sprite = 2

[node name="Boat4" parent="." instance=ExtResource( 13 )]
position = Vector2( 3600, 282.241 )
sprite = 3

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Back" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.03, 1.03 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Back"]
texture = ExtResource( 7 )
centered = false

[node name="Middle" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.05, 1.05 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Middle"]
texture = ExtResource( 3 )
centered = false

[node name="Front" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.1, 1.1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Front"]
texture = ExtResource( 8 )
centered = false

[node name="Crab" parent="." instance=ExtResource( 1 )]
position = Vector2( 2136, 808 )

[node name="MainCamera" type="Camera2D" parent="Crab"]
position = Vector2( -6.10352e-05, 0 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 1
limit_top = 0
limit_right = 4312
limit_bottom = 2792
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 1.0

[node name="OutsideArea" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutsideArea"]
position = Vector2( 2128, -16 )
shape = SubResource( 1 )

[node name="WorldBounds" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds"]
position = Vector2( -144, 1560 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldBounds"]
position = Vector2( 2248, 3472 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldBounds"]
position = Vector2( 4480, 1528 )
shape = SubResource( 2 )

[node name="Walls" type="Sprite" parent="WorldBounds"]
z_index = 1
texture = ExtResource( 4 )
centered = false

[node name="WaterBounds" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterBounds"]
position = Vector2( 2192, -368 )
shape = SubResource( 3 )

[node name="Stones" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="StonesSprite" type="Sprite" parent="Stones"]
texture = ExtResource( 6 )
centered = false

[node name="VegetationSprite" type="Sprite" parent="Stones"]
texture = ExtResource( 5 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( 1201.3, 58, 1349.5, 39.6, 1349.5, 48.7, 1436.1, 166.7, 1580.8, 218.4, 1533.8, 380, 1393.1, 481, 1180.2, 555, 907.5, 520.3, 791.5, 405.8, 805.7, 207, 899.2, 55, 1073.63, 15.8 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( -558.5, 54.7, -558.5, 64.1, -494.1, 249, -528.5, 365.5, -510.1, 505, -638.5, 497.8, -753.1, 367.9, -810.5, 357.3, -810.5, 336, -816.9, 90, -761.5, 40.3 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( -1120.5, 69.5, -1039.5, 133.5, -1007.9, 275, -1047.3, 407, -1083.3, 451, -1210.3, 509, -1232.6, 509, -1311.5, 449.4, -1357.5, 350.1, -1374.37, 143.8, -1206.37, 47.8 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( 168.5, 87.7, 279.8, 147, 643.2, 200.5, 641.8, 219, 640.8, 219, 626.8, 399, 608.9, 399, 396.5, 421.6, 242.3, 399.1, 209.5, 450, -99, 482, -113.5, 482, -303.5, 434.9, -390.1, 298.4, -289.4, 169, -46.3701, 47.8 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( -1598.5, 212.1, -1523.5, 303.3, -1570.5, 426, -1621.2, 472, -1677.2, 513, -1687.3, 513, -1778.5, 474.9, -1812.5, 417.3, -1827.1, 322, -1788.1, 230, -1646.37, 183.8 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( 1485, 578, 1486.1, 578, 1644.5, 597.1, 1644.5, 605.8, 1685.5, 690.7, 1687.1, 802, 1595.1, 911, 1522.5, 951, 1402.5, 866.5, 1351.4, 753, 1447.5, 560.7, 1460.4, 550.2 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( 42.3, 824.9, -74.6001, 964, -214.9, 1014, -327.5, 957.2, -327.5, 949.3, -363.5, 815.3, -328.5, 756.3, -328.5, 755.2, -354.9, 633, -342.8, 633, -252.5, 590.6, -252.5, 589.6, -240.9, 584.2 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( -849.5, 614.5, -902.2, 860, -862.5, 931.4, -902.6, 1110, -1019.5, 1153.4, -1019.5, 1052, -1021.4, 880, -1074.1, 692, -1056.2, 640, -918.5, 583.5 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( 1120, 796.7, 1232.5, 877.9, 1207.4, 1101, 1162.6, 1227, 920.5, 1322.1, 842.5, 1201.2, 791.5, 969.1, 788.8, 789, 1027.9, 652.3 )

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( 510.5, 825, 621.5, 893.4, 593.5, 1013, 527.9, 1073.2, 578.6, 1193, 509.5, 1283, 330.5, 1316, 137.5, 1164, 71.3999, 1009, 84.7, 1009, 194.7, 943.2, 216.5, 731, 424.6, 664.4 )

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( -1253.5, 718.6, -1207.5, 739.6, -1244.1, 1072.4, -1190.5, 1166.4, -1185.9, 1246, -1222.37, 1303.8, -1278.37, 1311.8, -1360.8, 1242, -1361.9, 1242, -1544.8, 1103, -1719.5, 1102.9, -1803.5, 1007.8, -1809.9, 960, -1700.1, 872.9, -1636.9, 735, -1605, 713, -1542.5, 705.7 )

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( -324.7, 1198.5, -407.8, 1320, -622.5, 1210.3, -686.6, 978, -675.5, 978, -579.5, 913, -566.3, 908.2 )

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="Stones"]
visible = false
position = Vector2( 2158.37, 1400.2 )
polygon = PoolVector2Array( 1879.5, 1095.4, 1911.2, 1134.6, 1903.1, 1146, 1833.63, 1215.8, 1713.63, 1231.8, 1684.2, 1299, 1489.5, 1239.7, 1477.6, 1173, 1485.7, 1173, 1555.7, 1087, 1562.7, 1087, 1703.5, 1066.3 )

[node name="FishPath1" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="FishSpawnPosition" type="PathFollow2D" parent="FishPath1"]
position = Vector2( -104, 440 )
rotation = 1.56266

[node name="FishPath2" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="FishSpawnPosition" type="PathFollow2D" parent="FishPath2"]
position = Vector2( 4376, 480 )
rotation = 1.5708

[node name="TrashSpawnPath" type="Path2D" parent="."]
curve = SubResource( 6 )

[node name="TrashSpawnPosition" type="PathFollow2D" parent="TrashSpawnPath"]
position = Vector2( 248, 2600 )
rotation = 0.253714

[node name="EelPath" parent="." instance=ExtResource( 14 )]

[node name="FishSpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="TensionMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="HUD" parent="." instance=ExtResource( 10 )]
[connection signal="body_entered" from="OutsideArea" to="." method="_on_OutsideArea_body_entered"]
[connection signal="body_exited" from="OutsideArea" to="." method="_on_OutsideArea_body_exited"]
[connection signal="timeout" from="FishSpawnTimer" to="." method="_on_FishSpawnTimer_timeout"]
